# Metta-Launcher

./: .gitignore  LICENSE  README.md  Untitled  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: UPDATER.md
.github/workflows/: deploy-web-surge.yml  tauri-build.yml  web-deploy.yml
scripts/: build-latest-json.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  bedrock.rs  db.rs  download.rs  game.rs  instances.rs  java.rs  lib.rs  loaders.rs  main.rs  paths.rs  system.rs
src-tauri/src/recorder/: audio.rs  capture.rs  commands.rs  encoder.rs  events.rs  ffmpeg_gate.rs  ffmpeg_install.rs  mod.rs  process.rs  recorder.rs  settings.rs  wasapi_loopback.rs
src/components/: UpdateProvider.tsx
src/components/recorder/: RecorderOverlay.tsx  RecorderPanel.tsx  RecorderSettings.tsx  RecorderStatus.tsx  RecordingsGallery.tsx
src/components/sponsors/: SponsorBadge.tsx
src/pages/: AccountsPage.tsx  BedrockPage.tsx  CreateInstancePage.tsx  Dashboard.tsx  DiagnosticsPage.tsx  EditInstancePage.tsx  HistoryPage.tsx  InstancesPage.tsx  LogsPage.tsx  ModsPage.tsx  OnboardingGate.tsx  RecordingPage.tsx  SettingsPage.tsx
src/services/: bridge.ts  launchInstance.ts  launchProgress.ts  modsService.ts  mojangNews.ts  platform.ts  updateService.ts
src/services/bedrock/: bedrockDetector.ts  bedrockLauncher.ts  bedrockPaths.ts  bedrockVersion.ts  index.ts
src/services/downloads/: downloadEvents.ts
src/services/minecraft/: assetService.ts  errorDiagnostics.ts  fabricInstaller.ts  fabricMeta.ts  forgeInstaller.ts  os.ts  (+11 more)
src/types/: bedrock.ts
src/ui/: Avatar.tsx  Card.tsx  Empty.tsx  Field.tsx  Hero.tsx  PageTransition.tsx  Progress.tsx  Sidebar.tsx  StatTile.tsx  Toast.tsx  Toggle.tsx  Topbar.tsx  cx.ts  icons.tsx  index.ts
src/utils/: format.ts  full-path.ts  tap.ts
web/: .env.example  README.md  next.config.mjs  nixpacks.toml  package-lock.json  package.json  railway.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChangelogSection.tsx  DownloadCard.tsx  DownloadSection.tsx  FAQ.tsx  FeatureGrid.tsx  Footer.tsx  Hero.tsx  Icons.tsx  InstallHelp.tsx  Navbar.tsx  SecuritySection.tsx  SponsorBadge.tsx
web/data/: downloads.ts  site.ts
web/lib/: detectPlatform.ts
(+4 files in other folders)
