[package]
name = "metta-launcher"
version = "0.1.0"
description = "Metta Minecraft Launcher"
authors = ["Metta"]
edition = "2021"

[lib]
name = "metta_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "native-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
dirs = "5"
dunce = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
